[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zpljet"
version = "1.0.0"
description = "Official Python SDK for the ZPLJet API — fast ZPL to PDF/PNG conversion"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ZPLJet", email = "support@zpljet.com" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["zpl", "zebra", "pdf", "png", "label", "shipping-label", "barcode", "printing", "zpljet"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://zpljet.com/docs"
Documentation = "https://zpljet.com/docs/sdks"
Repository = "https://github.com/zpljet/zpljet-python"
Changelog = "https://github.com/zpljet/zpljet-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build>=1", "pytest>=7", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/zpljet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.9"
files = ["src", "tests", "examples"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
